# neozork-hld-prediction

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .translation_cache.json  .translation_cache_fast.json  =7.2.0  Candle_Color_Comparison_Report.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_REORGANIZATION_REPORT.md  Docker-README.md  Dockerfile  Dockerfile.apple  Dockerfile.prod  ENHANCED_PLOTTING_FINAL_REPORT.md  EXRATE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVERS_MIGRATION_SUMMARY.md  MCP_SERVER_README.md  ML_DOCUMENTATION_REORGANIZATION_COMPLETE.md  MQL5_vs_Python_Comparison_Report.md  NATIVE_CONTAINER_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_REPORT.md  POCKET_HEDGE_FUND_LAUNCH.md  QUICK_START_NATIVE_CONTAINER.md  README.md  README_MCP_INTEGRATION.md  REFACTORING_SUMMARY.md  SAAS_PLATFORM_LAUNCH.md  SYSTEM_STATUS_REPORT.md  TERMINAL_COLOR_FIX_SUMMARY.md  TERMINAL_PLOTTING_SUMMARY.md  TESTING_FINAL_REPORT.md  TESTING_GUIDE.md  TESTING_REPORT.md  TESTING_SUCCESS_REPORT.md  WARP.md  analyze_red_candles.py  analyze_test_coverage.py  (+134 more)
.cursor/: settings.json
.git-rewrite/: backup-refs  commit  heads  message  revs
.github/workflows/: docker-build.yml  mcp-integration.yml  mcp-servers-ci.yml  phase1-ci-cd-minimal-backup.yml  phase1-ci-cd-simple-backup.yml  phase1-ci-cd.yml
.yf_cache/: cookies.db  tkr-tz.db
admin_panel/: README.md
admin_panel/src/: App.vue
data/: CSVExport_GBPUSD_PERIOD_MN1.parquet.  mn1.csv  sample_ohlcv_1000.csv  sample_ohlcv_2000.csv  sample_ohlcv_300.csv  sample_ohlcv_with_issues.csv  test_data.csv
data/cleaned_data/: README.md
data/mql5_feed/: CSVExport_EURUSD_PERIOD_D1.csv
data/raw_parquet/: binance_BTCUSDT_D1_2012-01-01_2025-04-01.parquet  binance_BTCUSDT_D1_2021-01-01_2025-04-01.parquet  binance_BTCUSDT_D1_2024-05-05_2025-04-05.parquet  binance_BTCUSDT_H1.parquet  binance_BTCUSDT_H1_2012-01-01_2025-04-01.parquet  binance_ETHUSDT_H1_2012-01-01_2025-04-01.parquet  binance_ETHUSDT_H1_2020-01-01_2021-01-01.parquet  (+8 more)
deploy/: production_setup.py
docker/: Dockerfile  README.md  docker-entrypoint.sh
docs/: CHANGES_SUMMARY.md  COMPREHENSIVE_CODEBASE_BRAINSTORM.md  Docker-README.md  FILE_ORGANIZATION.md  FINAL_REPORT.md  FINAL_TEST_ORGANIZATION_REPORT.md  MCP_SERVER_README.md  Migration_to_uv.md  PROJECT_REORGANIZATION_SUMMARY.md  README.md  SCRIPTS_STRUCTURE_GUIDE.md  TERMINAL_COLOR_FIX_SUMMARY.md  analysis-tools.md  ci-cd.md  copilot-instructions.md  cursor-mcp-server.md  debug-scripts.md  docker-examples.md  docker.md  eda-examples.md  eda-tools.md  examples-overview.md  exchange-rate-api-complete.md  exchange-rate-api.md  getting-started.md  index.md  indicator-examples.md  installation.md  installation_guide.md  interactive-mode-fixes.md  mcp-examples.md  overview.md  project-structure.md  quick-examples.md  quick-start.md  refactoring_summary.md  script-examples.md  scripts.md  testing-examples.md  testing.md  (+4 more)
interactive/: README.md  neozork.py
k8s/: neozork-apple-deployment.yaml
mcp/: MCP_SETUP_README.md  README.md  __init__.py  code_indexer.py  fix_mcp_connection.py  handler.py  handlers.py  logger.py  main.py  mcp-config.json  mcp.json  mcp_server.py  project_metadata.json  server.py  setup_mcp.py  test_mcp_server.py  test_pycharm_connection.py  utils.py
mobile_app/: App.tsx  README.md  app.json  package.json
models/: .gitignore
mql5_feed/: CSVExport_EURUSD_PERIOD_D1.csv  CSVExport_XAUUSD_PERIOD_MN1.csv
mql5_indicator/: CSVExport_XAUUSD_PERIOD_MN1.csv  SCHR_PRESSURE.mq5
notebooks/: eda_report_template.ipynb.py  eda_repot_template.ipynb.py
reports/: eda_feature_engineering_results_20250824_155943.json  eda_feature_engineering_results_20250824_160046.json  eda_feature_engineering_results_20250824_160546.json  iSHJty5paKPr6KDmZnmqBA.csv
scripts/: __init__.py  analyze_requirements.py  analyze_test_coverage.py  auto_pyproject_from_requirements.py  auto_start_mcp.py  check_mcp_status.py  check_uv_mode.py  convert_md_to_html.py  create_test_data.py  create_test_parquet.py  cursor_mcp_config.json  demo_feature_engineering.py  demo_terminal_chunked.py  demo_universal_metrics.py  deploy_apple_container.sh  eda_fe  fix_data_quality.py  fix_imports.py  init_dirs.sh  manage_test_results.py  mcp.json  neozork_mcp_manager.py  pycharm_mcp_config.json  recreate_csv.py  run_cursor_mcp.py  run_problematic_tests.sh  run_sequential_tests_docker.py  run_tests.py  run_tests_apple_container.py  run_tests_apple_safe.sh  run_tests_docker.py  run_tests_native_container.sh  run_tests_safe.sh  run_tests_safe_native.py  setup_database.sh  setup_ide_configs.py  setup_uv.sh  simple_dep_analyzer.py  start_mcp_server_daemon.py  start_pocket_hedge_fund.sh  (+4 more)
src/: __init__.py  cli.py  constants.py  core_calculations.py  data_utils.py  indicator.py  indicator_logic.py  logger.py  plotting.py  point_size_determination.py  rules.py  run_analysis.py  utils.py  workflow.py
tests/: README.md  __init__.py  conftest.py  conftest_native.py  run_all_tests.py  run_fast_tests.py  run_optimized_tests.py  run_tests.py  run_tests_docker.py  test_analysis_runner.py  test_base_feature_generator.py  test_base_feature_generator_new.py  test_conftest.py  test_data_manager.py  test_data_manager_column_cleaning.py  test_data_manager_fixes.py  test_data_manager_gap_fixing.py  test_debug_signals_analysis.py  test_debug_wave_indicator.py  test_debug_yfinance.py  test_execution_order.yaml  test_execution_order.yaml.backup  test_feature_engineering_manager.py  test_fix_imports.py  test_interactive_core.py  test_interactive_system.py  test_interactive_system_improvements.py  test_interactive_system_refactored.py  test_interactive_visualization_manager.py  test_logger.py  test_logger_new.py  test_md_to_html_converter.py  test_menu_manager.py  test_neozork_mcp_server.py  test_plot_display_fix.py  test_pycharm_github_copilot_mcp.py  test_run_analysis.py  test_run_analysis_interactive.py  test_start_mcp_server.py  test_stdio.py  (+4 more)
uv_setup/: README.md  clean_environment.sh  manage_deps.sh  setup_uv.sh  update_deps.sh  uv-migration.md  uv.toml
(+3024 files in other folders)
