[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "neozork-hld-prediction"
dynamic = ["version"]
description = "HLD Prediction tool"
requires-python = ">=3.11"
dependencies = [
    # Main dependencies
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    # Additional dependencies
    "plotext>=5.3.0",
    "plotly>=6.0.0",
    "colorama>=0.4.6",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "neozork-hld-prediction.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
