[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "neozork-hld-prediction"
dynamic = ["version"]
description = "HLD Prediction tool"
requires-python = ">=3.11"
dependencies = [
    # Core data processing
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",

    # Data science & ML
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.0",

    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "plotext>=5.3.0",
    "plotly>=6.0.0",
    "mplfinance",
    "bokeh>=3.7.0",

    # Utilities
    "colorama>=0.4.6",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "python-dotenv",
    "tqdm>=4.65.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "neozork-hld-prediction.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
